# SpaceWire_Software_Collection

./: .gitignore  Makefile  README.md  TAGS  configure.ac  grmon_script.sh  test_loopback  test_loopback.c  utility.c
Documentation/: MEU_Router_Configuration_procedure and constants.txt  rd_ramp_reply_analysis.txt
scripts/: build.sh  get_rtr1A_status.sh  router_defs.sh  rtr1A_config.sh  rtr1A_loopback_check.sh  rtrBroadcast_config.sh  rtr_sist_test.sh
src/: Makefile.am  apus.c  disable_if.c  load_reg.c  rd_rmap  stipa  stipa.c  system_config.h  test_error.c  test_la2_routing.c  test_la_routing.c  test_list_devices.c  test_loopback.c  test_read_rmap.c  test_receiv.c  test_reset_dev.c  test_rmap.c  test_routing_NDPU.c  test_send.c  test_static_routing.c  test_timecode.c  utility.c  utility.h
